# building-and-tracking-a-road-model

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  vREADME.md
Tests/: CMakeLists.txt  test_curvature_calculation.cpp  test_perpendicular_line_calculation.cpp  test_remove_small_contours.cpp  test_system_solutions_with_respect_to_x.cpp  test_tangent_line_calculation.cpp
Tests/basic_tests/: CMakeLists.txt  test_curvature_calculation.cpp
src/: ContourBuilder.cpp  ContourBuilder.h  CurvatureCalculator.cpp  CurvatureCalculator.h  Drawer.cpp  Drawer.h  ExperimentWithCurvatureCalculation.cpp  ExperimentWithCurvatureCalculation.h  RealDataTester.cpp  RealDataTester.h  RoadModel.cpp  RoadModel.h  RoadModelBuilder.cpp  RoadModelBuilder.h  RoadModelTracker.cpp  RoadModelTracker.h  Utils.cpp  Utils.h  contourBuilder.cpp  contourBuilder.h  main.cpp  utils.cpp
